--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	     </div>
 
 	 <div class="carousel-item">
-		<img src="img/background2.jpg">
+		<img src="img/55.jpg">
 	    </div>
 	    <div class="carousel-item">
 		<img src="img/background3.jpg">
