--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<img src="img/55.jpg">
 	    </div>
 	    <div class="carousel-item">
-		<img src="img/background3.jpg">
+		<img src="img/2.jpg">
     </div>
 </div>
 </div>
